--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   shelf: ^1.1.0
   shelf_router: ^1.0.0
   mocktail: ^0.3.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   lints: ^2.0.0
