--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "EBChallenge",
-  "name": "EasyBroker Challenge",
+  "short_name": "GoodHouse",
+  "name": "GoodHouse",
   "icons": [
     {
       "src": "favicon.ico",
